# nodaw-launcher

./: .gitignore  App.tsx  CHANGELOG.md  DESIGN_SYSTEMS_MASTER.md  FRONTEND_EXCELLENCE.md  LICENSE  NODAW_COMPLETION_VALUE_REVENUE_PLAN.md  NODAW_IMPLEMENTATION_GUIDE_2026-04-05.md  NODAW_MASTER_BLUEPRINT_2026-04-05.md  NODAW_TOOL_INVENTORY.md  NODAW_VST_INVENTORY.md  NoDAW - 5 in 1.code-workspace  NoDAW_Clipper_2026_Gumroad_Strategy_and_Product_Plan.md  NoDAW_Launcher_Analysis_2026-03-18.md  NoDAW_Launcher_Gating_Unlock_Design_2026-03-19.md  NoDAW_Launcher_Onboarding_Prototype_2026-03-19.md  NoDAW_Launcher_Wireframe_2026-03-19.md  ONLINE_RESOURCES_INDEX.md  PHASE_ASSESSMENT_2026-04-14.md  README.md  SMARTPROMPTIT_MASTER_VISION.md  SMARTPROMPTIT_STANDALONE_AND_WEB_PLAN_2026-04-15.md  SUPER_MASTER_TODO_LIST.md  SYSTEM_DESIGN.md  VST_EXECUTION_SEQUENCE_2026-04-15.md  VST_MONETIZATION_RANKING_2026-04-15.md  WORKSTATION_MASTER_PLAN.md  audioAnalysis.ts  constants.tsx  convert-icon.cjs  index.css  index.html  index.tsx  lamejs.d.ts  license.ts  metadata.json  package-lock.json  package.json  tailwind.config.js  types.ts  (+1 more)
.github/workflows/: build.yml  deploy.yml  security-gates.yml
ClipIT/: CMakeLists.txt  README.md  release.ps1  release.sh  ship_vst3.ps1
ClipIT/.github/workflows/: release.yml
ClipIT/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
ClipIT/Source/State/: ParameterLayout.h
ClipIT/docs/: CLIPIT_USER_MANUAL.md  INSTALL_MACOS.md  INSTALL_WINDOWS.md  RELEASE_GUIDE.md
ClipIT/installers/macos/: create_installer_bundle.sh  create_pkg_installer.sh  install_clipit.sh  ship_vst3_macos.sh
ClipIT/installers/windows/: create_installer_bundle.ps1  create_native_installer.ps1  install_clipit.ps1  uninstall_clipit.ps1
IconGenius/: index.html  package-lock.json  package.json  tailwind.config.js
IconGenius/electron/: main.js
IconGenius/src/: App.tsx  index.css
RepairIT/: CMakeLists.txt  HOST_VALIDATION_CHECKLIST.md  README.md  ship_vst3.ps1
RepairIT/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
RepairIT/Source/State/: ParameterLayout.h
ScrewAI/: README.md  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
ScrewAI/components/: AudioEditorModal.ts  CodeineProcessor.ts  ControlsBar.ts  DownloadModal.ts  EqDrawer.ts  FxDrawer.ts  GenreDrawer.ts  MasterDrawer.ts  MixDrawer.ts  PlayPauseButton.ts  ProcessingModal.ts  PromptController.ts  PromptDjMidi.ts  RecorderDrawer.ts  SettingsModal.ts  ThemeToggle.ts  ToastMessage.ts  VerticalFader.ts  WeightKnob.ts
ScrewAI/electron/: main.cjs  preload.cjs
ScrewAI/utils/: LiveMusicHelper.ts  audio.ts  presets.ts
TimeStretchX/: CMakeLists.txt  DAW_VALIDATION_MATRIX.md  README.md  TIMESTRETCH_X_MASTER_PLAN.md  release.ps1  release.sh  ship_vst3.ps1
TimeStretchX/.github/workflows/: release.yml
TimeStretchX/Resources/: README.md
TimeStretchX/Resources/Fonts/: README.md
TimeStretchX/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
TimeStretchX/Source/DSP/: NativeAudioGraph.cpp  NativeAudioGraph.h  TimeStretchEngine.cpp  TimeStretchEngine.h
TimeStretchX/Source/State/: ParameterLayout.h  PresetManager.h
TimeStretchX/Source/UI/Components/: AlgorithmSelector.cpp  AlgorithmSelector.h  AnimatedIcon.cpp  AnimatedIcon.h  DualKnob.cpp  DualKnob.h  PresetBrowser.cpp  PresetBrowser.h  WaveformDisplay.cpp  WaveformDisplay.h
TimeStretchX/Source/UI/LookAndFeel/: Colours.h  NoDAWLookAndFeel.cpp  NoDAWLookAndFeel.h
TimeStretchX/docs/: INSTALL_MACOS.md  INSTALL_WINDOWS.md  QUALITY_SCORECARD.md  RELEASE_GUIDE.md
TimeStretchX/installers/macos/: create_pkg_installer.sh  install_timestretchx.sh  uninstall_timestretchx.sh
TimeStretchX/installers/windows/: create_native_installer.ps1  install_timestretchx.ps1  uninstall_timestretchx.ps1
TimeStretchX/scripts/: score_release_readiness.ps1
TrimIt/: index.html  package-lock.json  package.json  tailwind.config.js
TrimIt/electron/: main.js
TrimIt/src/: App.tsx  Waveform.tsx  audioUtils.ts  index.css
TrimIt/src/components/: DownloadModal.tsx
audio/core/: AudioEngine.ts  AudioGraph.ts  AudioNode.ts  Connection.ts  SnapshotManager.ts  ringBuffer.ts
audio/plugins/: DSPPlugin.ts  GainPlugin.ts  GranularPlugin.ts  PitchPlugin.ts  TimeStretchPlugin.ts
audio/wasm/: dsp-loader.ts
audio/worklets/: timeStretchProcessor.js
components/: AudioAnalysisPanel.tsx  LauncherHub.tsx  Paywall.tsx  Tabs.tsx  Untitled-1.md  VaultShowcase.tsx  Visualizer.tsx  Waveform.tsx
components/core/: ActionButton.tsx  DataFlicker.tsx  DiagonalFlipPanel.tsx  GlassPanel.tsx  IntelligenceCore.tsx  MetricCard.tsx  TimelineBar.tsx  VaultBottomBar.tsx  VaultControls.tsx  VaultDoor.tsx  index.ts
components/landing/: SalesLandingPage.tsx
components/launcher/: AchievementBadge.tsx  AnimatedLogo.tsx  BackgroundAnimation.tsx  DropZoneOverlay.tsx  FeatureGrid.tsx  FeatureTile.tsx  FeatureTile3D.tsx  LauncherApp.tsx  LauncherOnboarding.tsx  ParticleField.tsx  ProGate.tsx  SecretToolsMenu.tsx  ShatterUnlockModal.tsx  SmartPromptItDemo.tsx  SmartPromptItModal.tsx  ThemeToggle.tsx  UnlockModal.tsx  index.ts  licenseStore.ts  promptEngine.ts  secretToolsStore.ts  themeStore.ts  tools.ts  usageStore.ts
components/launcher/bulk/: BulkProgressModal.tsx  BulkUploadManager.tsx  EffectChainBuilder.tsx  PromptGenius.ts  PromptGeniusUI.tsx  bulkStore.ts  index.ts  types.ts
components/workstation/: AudioRegion.tsx  AutomationLane.tsx  Timeline.tsx  TrackList.tsx  TrackRow.tsx  TransportBar.tsx  WorkstationPanel.tsx  workstationStore.ts
docs/: SECURITY_RELEASE_RUNBOOK.md  index.html
electron/: main.cjs  preload.cjs
hooks/: index.ts  useMagnetic.ts  useSoundManager.ts
public/: Index.html  llms.txt  robots.txt  sitemap.xml
scripts/: build-subapps.mjs  release-safety-check.ps1  stage-security-hardening.ps1
styles/: animations.css  glass.css  tokens.css
types/: fftjs.d.ts
utils/: motion.ts
wasm-dsp/src/: dsp.h  engine.c
wasm-dsp/src/core/: buffer.c  (+1 more)
(+38 files in other folders)
